exports[`test Add to a Mithril element 1`] = `
"<div>
  Some element
</div>
<div class=\"pe-shadow\">
  <div class=\"pe-shadow__bottom pe-shadow--z-1\"></div>
  <div class=\"pe-shadow__top pe-shadow--z-1\"></div>
</div>
"
`;

exports[`test Child node 1`] = `
"<div class=\"pe-shadow\">
  Child
  <div class=\"pe-shadow__bottom pe-shadow--z-1\"></div>
  <div class=\"pe-shadow__top pe-shadow--z-1\"></div>
</div>
"
`;

exports[`test Interactive option: animated -- dark theme 1`] = `
"<div class=\"absolute absolute--fill\">
  Click me
</div>
<div class=\"pe-shadow pe-shadow--animated\">
  <div class=\"pe-shadow__bottom pe-shadow--z-1\"></div>
  <div class=\"pe-shadow__top pe-shadow--z-1\"></div>
</div>
"
`;

exports[`test Interactive option: animated 1`] = `
"<div class=\"absolute absolute--fill\">
  Click me
</div>
<div class=\"pe-shadow pe-shadow--animated\">
  <div class=\"pe-shadow__bottom pe-shadow--z-1\"></div>
  <div class=\"pe-shadow__top pe-shadow--z-1\"></div>
</div>
"
`;

exports[`test Option: content 1`] = `
"<div class=\"pe-shadow\">
  Content
  <div class=\"pe-shadow__bottom pe-shadow--z-1\"></div>
  <div class=\"pe-shadow__top pe-shadow--z-1\"></div>
</div>
"
`;

exports[`test Option: z (0) 1`] = `
"<div class=\"pe-shadow\">
  <div class=\"pe-shadow__bottom pe-shadow--z-0\"></div>
  <div class=\"pe-shadow__top pe-shadow--z-0\"></div>
</div>
"
`;

exports[`test Option: z (1) 1`] = `
"<div class=\"pe-shadow\">
  <div class=\"pe-shadow__bottom pe-shadow--z-1\"></div>
  <div class=\"pe-shadow__top pe-shadow--z-1\"></div>
</div>
"
`;

exports[`test Option: z (2) 1`] = `
"<div class=\"pe-shadow\">
  <div class=\"pe-shadow__bottom pe-shadow--z-2\"></div>
  <div class=\"pe-shadow__top pe-shadow--z-2\"></div>
</div>
"
`;

exports[`test Option: z (3) 1`] = `
"<div class=\"pe-shadow\">
  <div class=\"pe-shadow__bottom pe-shadow--z-3\"></div>
  <div class=\"pe-shadow__top pe-shadow--z-3\"></div>
</div>
"
`;

exports[`test Option: z (4) 1`] = `
"<div class=\"pe-shadow\">
  <div class=\"pe-shadow__bottom pe-shadow--z-4\"></div>
  <div class=\"pe-shadow__top pe-shadow--z-4\"></div>
</div>
"
`;

exports[`test Option: z (5) 1`] = `
"<div class=\"pe-shadow\">
  <div class=\"pe-shadow__bottom pe-shadow--z-5\"></div>
  <div class=\"pe-shadow__top pe-shadow--z-5\"></div>
</div>
"
`;
